/*
 * $Id: ChangeLog,v 1.2135 2004/01/25 15:07:09 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-25 20:07 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtapi.c
    ! hb_gtGobjectInside() must return true if the area INTERSECTS with the given
      object, and not just if the object is partially or completely inside the area
      as it was before.
      
  * source/rtl/gtxvt/gtxvt.c
    + Added X Clipping while drawing graphical objects to allow correctly
      layering of graphical objects.

2004-01-25 16:05 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * Makefile.bc
    + Added gtgraph support

  * source/rtl/gtwvt/gtwvt.c
    + Added support for gtgraph

2004-01-25 19:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbfcdx/dbfcdx1.c
    * corrections on recently commited changes on casts.

  * source/rtl/gtgraph.c
    ! add type castings

2004-01-25 13:56 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapigt.h
  * source/rtl/gtapi.c
    + Objects are now drawn last-to-first, and the internal objects are
      represented as a linked list.
    ! Fixed castings.

  * source/rtl/gtgraph.c
    + Added prgfunction GtRGB( nRed, nGreen, nBlue [,nAlpha] )
      Values can be float from 0 to 1 or integers from 0 to 65635 (256*256-1).
      REMEMBER TO USE 1.0 to signify "full" for one color, if using the float
      numbers.

  * source/rtl/gtxvt/gtxvt.c
    ! Before, color codes were ranging from 0 to 255, while they are
      corrected now in gtapi so that they ranges from 0 to 65635; corrections
      here to cope with this.

  * tests/gtgrap.prg
    + Added tests to demonstrate both this features.

2004-01-25 10:40 UTC-0300 Luiz Rafael Culik Guimares <culikr@brturbo.com>
  *config/linux/gcc.cf